--- a/templates/index.html
+++ b/templates/index.html
@@ -43,6 +43,8 @@
         {{mars_info.mars_facts|safe}}   
       </div>
     </div>
+
+    <!-- Mars hemispheres grid/bootsrap-->
     <article>
       <div class="row">
         <div class="col-md-12">
